--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
       {{ content }}
     </main>
     <footer>
-      <p>Hosted on GitHub Pages — Theme customized from minimal</p>
+      <p>Hosted on GitHub Pages — Bioinformatics Study Group in Okayama University</p>
     </footer>
   </body>
 </html>
