--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,7 +84,7 @@
       </div>
       <ul id="tocify-list"></ul>
       <div id="tocify-footer" style="margin-top:1.5em; text-align:center;">
-        <a href="/index.html" id="tocify-home-btn" style="
+        <a href="https://labonom.github.io/" id="tocify-home-btn" style="
           display: inline-block;
           padding: 0.4em 1.2em;
           background: #2563eb;
