--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -13,6 +13,12 @@ type: article
 
   <div class="article__content" itemprop="articleBody">{{ content }}</div>
 
+  {% if site.comments.enabled and site.comments.provider == "utterances" %}
+    <div class="d-print-none">
+      {% include utterances.html %}
+    </div>
+  {% endif %}
+
   {%- if _sharing -%}
     <section class="article__sharing d-print-none">{%- include sharing.html -%}</section>
   {%- endif -%}
@@ -21,7 +27,6 @@ type: article
     {%- include article-footer.html -%}
     {%- include article-section-navigator.html -%}
   </div>
-
 </div>
 
 <script>
