--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
   <body>
     <header>
       <div style="display: flex; align-items: center; gap: 1em;">
-        <img src="/img/124112083.jpeg" alt="BSGOU Logo" style="height: 48px;">
+        <img src="/assets/Logo_Clear_LogoOnly.png" alt="BSGOU Logo" style="height: 48px;">
         <div>
           <h1 style="margin:0;">{{ site.title }}</h1>
           <p style="margin:0;">{{ site.description }}</p>
