--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -34,10 +34,10 @@ layout: page
 {%- if _articles -%}
 
   <!-- Subscribe by Email Button -->
-  <div style="text-align: right; margin: 20px 0;">
-    <button id="open-subscribe-popup"
-      style="background:#6c78d5; color:#fff; padding:7px 18px; border-radius:6px; font-weight:bold; border:none; cursor:pointer;">
-      Subscribe by Email
+  <div class="subscribe" style="text-align: right; margin: 20px 0;">
+    <i class="fas fa-rss"></i>
+    <button id="open-subscribe-popup">
+      <a class="button button--primary button--rounded button--xs" type="application/rss+xml">Subscribe by Email</a>
     </button>
   </div>
 
