--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -34,11 +34,10 @@ layout: page
 {%- if _articles -%}
 
   <!-- Subscribe by Email Button -->
-  <div class="subscribe" style="text-align: right; margin: 20px 0;">
-    <i class="fas fa-rss"></i>
+  <div class="subscribe" style="text-align: right; margin: 0px 0;">
     <button id="open-subscribe-popup">
       <a class="button button--primary button--rounded button--xs" type="application/rss+xml">Subscribe by Email</a>
-    </button>
+    </button><i class="fas fa-rss"></i>
   </div>
 
   <div class="layout--articles">
