update RSS button style

--- a/_includes/article-footer.html
+++ b/_includes/article-footer.html
@@ -44,7 +44,7 @@
     <div class="subscribe" style="text-align: left; margin: 0px 0;">
       <button id="open-subscribe-popup">
         <a class="button button--primary button--rounded button--xs" type="application/rss+xml">Subscribe by Email</a>
-      </button><i class="fas fa-rss"></i>
+      </button>
     </div>
     <!-- Subscribe Popup Modal -->
     <div id="subscribe-popup" style="display:none; position:fixed; z-index:9999; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.4);">
