--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -37,7 +37,7 @@ layout: page
   <div class="subscribe" style="text-align: right; margin: 0px 0;">
     <button id="open-subscribe-popup">
       <a class="button button--primary button--rounded button--xs" type="application/rss+xml">Subscribe by Email</a>
-    </button><i class="fas fa-rss"></i>
+    </button>
   </div>
 
   <div class="layout--articles">
