--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -29,6 +29,7 @@ titles:
 <div class="layout--archive js-all">
   {%- include tags.html -%}
   <div class="js-result layout--archive__result d-none">
+    {%- assign visible_posts = site.posts | where_exp: "post", "post.hidden != true" -%}
     {%- include article-list.html articles=site.posts type='brief' show_info=true reverse=true group_by='year' -%}
   </div>
 </div>
