--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<meta name="follow.it-verification-code" content="f1zx2vZPUZPWnXULwthk"/>
+<meta name="follow.it-verification-code" content="bAjR1e3VsgJ1RAUQk1lz"/>
 
 {%- include snippets/get-article-title.html article=page -%}
 <title>{%- if __return -%}{{ __return }} - {{ site.title }}{%- else -%}{{ site.title }}{%- endif -%}</title>
