--- a/_includes/author-links.html
+++ b/_includes/author-links.html
@@ -101,7 +101,7 @@
     {%- endif -%}
 
     {%- if _author.github -%}
-      <li title="{{ _locale_string_follow | replace: '[NAME]', 'Github' }}">
+      <li title="{{ _locale_string_follow | replace: '[NAME]', 'GitHub' }}">
         <a class="button button--circle github-button" itemprop="sameAs" href="https://github.com/{{ _author.github }}" target="_blank">
           <div class="icon">{%- include svg/icon/social/github.svg -%}</div>
         </a>
