--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" type="image/png" href="img/favicons/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="img/favicons/favicon.svg" />
-    <link rel="shortcut icon" href="img/favicons/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png" />
-    <link rel="manifest" href="img/favicons/site.webmanifest" />
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" href="/img/favicons/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/img/favicons/favicon.svg" />
+    <link rel="shortcut icon" href="/img/favicons/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/apple-touch-icon.png" />
+    <link rel="manifest" href="/img/favicons/site.webmanifest" />
     <meta charset="UTF-8">
     <title>{{ site.title }}</title>
     <style>
